--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #ffffff;
-  color: #2d3748;
+  color: #2b2b2b;
   line-height: 1.6;
   overflow-x: hidden;
 }
