--- a/src/componentes/Contenido/Culture.css
+++ b/src/componentes/Contenido/Culture.css
@@ -35,7 +35,7 @@
   font-size: 2.75rem;
   font-weight: 900;
   margin: 0;
-  color: #2d3748;
+  color: #2b2b2b;
   letter-spacing: -0.5px;
 }
 
@@ -135,7 +135,7 @@
   font-size: 1.35rem;
   font-weight: 700;
   margin: 0 0 1rem 0;
-  color: #2d3748;
+  color: #2b2b2b;
   letter-spacing: -0.3px;
 }
 
