--- a/src/componentes/Contenido/Metodologia.css
+++ b/src/componentes/Contenido/Metodologia.css
@@ -256,7 +256,7 @@
 .metodologia-titulo {
   font-size: 2.8rem;
   font-weight: 900;
-  color: #222c36;
+  color: #2b2b2b;
   letter-spacing: -1px;
   margin-bottom: 10px;
   font-family: 'Source Code Pro', monospace;
@@ -312,7 +312,7 @@
 .metodologia-paso-titulo {
   font-size: 1.32rem;
   font-weight: 900;
-  color: #222c36;
+  color: #2b2b2b;
   margin-bottom: 8px;
   font-family: 'Source Code Pro', monospace;
 }
@@ -530,7 +530,7 @@
   font-family: 'Source Code Pro', monospace;
   font-size: 1.3rem;
   font-weight: 700;
-  color: #2d3748;
+  color: #2b2b2b;
   margin: 0;
 }
 
