--- a/src/componentes/Contenido/Proyectos.css
+++ b/src/componentes/Contenido/Proyectos.css
@@ -61,7 +61,7 @@
 
 .proyecto-modal-close:hover {
   background: rgba(255, 255, 255, 1);
-  color: #333;
+  color: #2b2b2b;
   transform: scale(1.1);
 }
 
@@ -358,7 +358,7 @@
   font-family: 'Source Code Pro', monospace;
   font-size: 2rem;
   font-weight: 900;
-  color: #2d3748;
+  color: #2b2b2b;
   margin: 0;
   line-height: 1.2;
 }
@@ -569,7 +569,7 @@
   font-family: 'Source Code Pro', monospace;
   font-size: 2.2rem;
   font-weight: 900;
-  color: #2d3748;
+  color: #2b2b2b;
   margin: 0;
   line-height: 1.2;
 }
@@ -597,7 +597,7 @@
   font-family: 'Source Code Pro', monospace;
   font-size: 1.1rem;
   font-weight: 700;
-  color: #2d3748;
+  color: #2b2b2b;
 }
 
 .proyecto-modal-tags {
