--- a/src/componentes/Contenido/Tecnologias.css
+++ b/src/componentes/Contenido/Tecnologias.css
@@ -11,7 +11,7 @@
   font-weight: 900;
   text-align: left;
   margin-bottom: 1rem;
-  color: #2d3748;
+  color: #2b2b2b;
   letter-spacing: -1px;
 }
 
@@ -307,7 +307,7 @@
   font-family: 'Source Code Pro', monospace;
   font-size: 1.3rem;
   font-weight: 700;
-  color: #2d3748;
+  color: #2b2b2b;
   margin: 0 0 1rem 0;
 }
 
