--- a/src/componentes/Contenido/Testimonios.css
+++ b/src/componentes/Contenido/Testimonios.css
@@ -83,7 +83,7 @@
 .testimonio-texto {
   font-family: 'Roboto', sans-serif;
   font-size: 1.2rem;
-  color: #2d3748;
+  color: #2b2b2b;
   line-height: 1.8;
   margin: 0 0 2rem 0;
   font-style: italic;
@@ -141,7 +141,7 @@
   font-family: 'Source Code Pro', monospace;
   font-size: 1.2rem;
   font-weight: 700;
-  color: #2d3748;
+  color: #2b2b2b;
 }
 
 .testimonio-cargo {
@@ -290,7 +290,7 @@
   font-family: 'Source Code Pro', monospace;
   font-size: 1.6rem;
   font-weight: 900;
-  color: #2d3748;
+  color: #2b2b2b;
   margin: 0 0 0.5rem 0;
 }
 
@@ -331,7 +331,7 @@
 .testimonio-modal-texto {
   font-family: 'Roboto', sans-serif;
   font-size: 1.15rem;
-  color: #2d3748;
+  color: #2b2b2b;
   line-height: 1.9;
   margin: 0;
   font-style: italic;
