--- a/src/componentes/Contenido/ContactoFormulario.css
+++ b/src/componentes/Contenido/ContactoFormulario.css
@@ -198,6 +198,14 @@
 
 .contacto-submit-btn svg {
   font-size: 1.3rem;
+  display: inline-block;
+  vertical-align: middle;
+  flex-shrink: 0;
+}
+
+.contacto-submit-btn span {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .mensaje-exito {
